Height and position of circles fixed on mobile

--- a/styles.css
+++ b/styles.css
@@ -116,8 +116,8 @@ body, html {
 
   /* variables */
 
-  --circle-size-yellow:         690px;
-  --circle-size-blue:           430px;
+  --circle-size-yellow:         790px;
+  --circle-size-blue:           530px;
   --circle-size-white:          200px;
   --circle-size-black:          100px;
 
